--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
 
     <script>
-      const BASE_API_URL = "http://localhost:5000";
+      const BASE_API_URL = "https://sm-backend-test.vercel.app";
 
       let editingRegNo = null;
 
