--- a/index.html
+++ b/index.html
@@ -3,90 +3,322 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Student Management</title>
+    <title>Student Management Test</title>
     <style>
       * {
         box-sizing: border-box;
-        font-family: Arial, sans-serif;
-      }
-      body {
         margin: 0;
-        padding: 20px;
-        background: #f5f5f5;
+        padding: 0;
       }
+
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        min-height: 100vh;
+        padding: 20px;
+        line-height: 1.6;
+      }
+
       .container {
-        max-width: 900px;
+        max-width: 1200px;
         margin: 0 auto;
       }
+
       h1 {
-        color: #333;
+        color: white;
         text-align: center;
+        font-size: clamp(1.8rem, 4vw, 2.5rem);
+        margin-bottom: 2rem;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+        font-weight: 300;
       }
+
       .card {
         background: white;
-        padding: 15px;
-        border-radius: 5px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        margin-bottom: 20px;
+        padding: clamp(15px, 3vw, 30px);
+        border-radius: 15px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        margin-bottom: 25px;
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.2);
       }
+
+      h2 {
+        color: #2c3e50;
+        margin-bottom: 1.5rem;
+        font-size: clamp(1.2rem, 3vw, 1.5rem);
+        font-weight: 600;
+      }
+
       input,
       button {
-        padding: 8px;
-        margin: 5px 0;
+        padding: 12px 16px;
+        margin: 8px 0;
+        border-radius: 8px;
+        font-size: 14px;
+        transition: all 0.3s ease;
       }
+
       input {
         width: 100%;
-        border: 1px solid #ddd;
-        border-radius: 4px;
+        border: 2px solid #e1e8ed;
+        background: #f8f9fa;
+        color: #2c3e50;
       }
+
+      input:focus {
+        outline: none;
+        border-color: #667eea;
+        background: white;
+        box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+        transform: translateY(-1px);
+      }
+
+      input::placeholder {
+        color: #95a5a6;
+      }
+
       button {
-        background: #4caf50;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         color: white;
         border: none;
-        border-radius: 4px;
         cursor: pointer;
-        margin-right: 5px;
+        margin-right: 8px;
+        font-weight: 500;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+        box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
       }
+
+      button:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
+      }
+
+      button:active {
+        transform: translateY(0);
+      }
+
       button.delete {
-        background: #f44336;
+        background: linear-gradient(135deg, #e74c3c 0%, #c0392b 100%);
+        box-shadow: 0 4px 15px rgba(231, 76, 60, 0.3);
       }
+
+      button.delete:hover {
+        box-shadow: 0 6px 20px rgba(231, 76, 60, 0.4);
+      }
+
       button.edit {
-        background: #2196f3;
+        background: linear-gradient(135deg, #3498db 0%, #2980b9 100%);
+        box-shadow: 0 4px 15px rgba(52, 152, 219, 0.3);
       }
+
+      button.edit:hover {
+        box-shadow: 0 6px 20px rgba(52, 152, 219, 0.4);
+      }
+
       table {
         width: 100%;
         border-collapse: collapse;
+        margin-top: 15px;
+        background: white;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
       }
+
       th,
       td {
         text-align: left;
-        padding: 8px;
-        border-bottom: 1px solid #ddd;
+        padding: clamp(8px, 2vw, 15px);
+        border-bottom: 1px solid #ecf0f1;
       }
+
+      th {
+        background: linear-gradient(135deg, #34495e 0%, #2c3e50 100%);
+        color: white;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+        font-size: clamp(0.8rem, 2vw, 0.9rem);
+      }
+
+      td {
+        color: #2c3e50;
+        font-size: clamp(0.8rem, 2vw, 0.9rem);
+      }
+
+      tr:nth-child(even) {
+        background: #f8f9fa;
+      }
+
+      tr:hover {
+        background: #e8f4fd;
+        transform: scale(1.01);
+        transition: all 0.2s ease;
+      }
+
       .message {
-        padding: 10px;
-        margin: 10px 0;
-        border-radius: 4px;
+        padding: 15px 20px;
+        margin: 15px 0;
+        border-radius: 10px;
         display: none;
+        font-weight: 500;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
       }
+
       .success {
-        background: #dff0d8;
-        color: #3c763d;
+        background: linear-gradient(135deg, #2ecc71 0%, #27ae60 100%);
+        color: white;
+        border-left: 4px solid #27ae60;
       }
+
       .error {
-        background: #f2dede;
-        color: #a94442;
+        background: linear-gradient(135deg, #e74c3c 0%, #c0392b 100%);
+        color: white;
+        border-left: 4px solid #c0392b;
       }
+
       .form-row {
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 15px;
+        margin-bottom: 10px;
+      }
+
+      .search-container {
+        display: grid;
+        grid-template-columns: 1fr auto auto;
         gap: 10px;
+        margin-bottom: 20px;
+        align-items: end;
       }
-      .form-row input {
-        flex: 1;
-      }
-      @media (max-width: 600px) {
+
+      /* Responsive Design */
+      @media (max-width: 768px) {
+        body {
+          padding: 10px;
+        }
+
         .form-row {
+          grid-template-columns: 1fr;
+          gap: 10px;
+        }
+
+        .search-container {
+          grid-template-columns: 1fr;
+          gap: 8px;
+        }
+
+        table {
+          font-size: 12px;
+        }
+
+        th,
+        td {
+          padding: 8px 4px;
+        }
+
+        button {
+          padding: 10px 12px;
+          font-size: 12px;
+          margin: 4px 2px;
+        }
+
+        .card {
+          margin-bottom: 15px;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .search-container {
+          grid-template-columns: 1fr;
+        }
+
+        button {
+          width: 100%;
+          margin: 4px 0;
+        }
+
+        table {
+          display: block;
+          overflow-x: auto;
+          white-space: nowrap;
+        }
+
+        th,
+        td {
+          min-width: 120px;
+        }
+      }
+
+      @media (max-width: 360px) {
+        .form-row {
+          gap: 8px;
+        }
+
+        input,
+        button {
+          padding: 10px 12px;
+          font-size: 13px;
+        }
+
+        .card {
+          padding: 15px;
+        }
+      }
+
+      .loading-state,
+      .empty-state {
+        text-align: center;
+        padding: 40px 20px;
+        color: #7f8c8d;
+        font-style: italic;
+      }
+
+      .loading-state {
+        background: linear-gradient(45deg, #f8f9fa, #e9ecef);
+        border-radius: 10px;
+      }
+
+      .action-buttons {
+        display: flex;
+        gap: 5px;
+        flex-wrap: wrap;
+      }
+
+      @media (max-width: 480px) {
+        .action-buttons {
           flex-direction: column;
+        }
+
+        .action-buttons button {
+          margin: 2px 0;
+          width: 100%;
+        }
+      }
+
+      .card,
+      button,
+      input,
+      tr {
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      }
+
+      button:focus,
+      input:focus {
+        outline: 2px solid #667eea;
+        outline-offset: 2px;
+      }
+
+      @media (max-width: 600px) {
+        .table-responsive {
+          overflow-x: auto;
+          -webkit-overflow-scrolling: touch;
+        }
+
+        table {
+          min-width: 500px;
         }
       }
     </style>
@@ -122,18 +354,13 @@
       </div>
 
       <div class="card">
-        <div style="display: flex; margin-bottom: 10px">
-          <input
-            type="text"
-            id="search-regNo"
-            placeholder="Search by Reg No"
-            style="flex: 1; margin-right: 5px"
-          />
+        <div class="search-container">
+          <input type="text" id="search-regNo" placeholder="Search by Reg No" />
           <button onclick="searchStudent()">Search</button>
           <button onclick="loadAllStudents()">All</button>
         </div>
 
-        <div id="students-container">Loading...</div>
+        <div id="students-container" class="table-responsive">Loading...</div>
       </div>
     </div>
 
@@ -235,8 +462,10 @@
                                 <td>${student.name}</td>
                                 <td>${student.email}</td>
                                 <td>
-                                    <button class="edit" onclick="editStudent('${student.regNo}')">Edit</button>
-                                    <button class="delete" onclick="deleteStudent('${student.regNo}')">Delete</button>
+                                    <div class="action-buttons">
+                                        <button class="edit" onclick="editStudent('${student.regNo}')">Edit</button>
+                                        <button class="delete" onclick="deleteStudent('${student.regNo}')">Delete</button>
+                                    </div>
                                 </td>
                             </tr>
                         `
